vitrail-sqlite-macros/tests/ui/fail/composite_index_relation_field.stderr
error: index field `author` must be scalar
  --> tests/ui/fail/composite_index_relation_field.rs:18:29
   |
18 |         @@index([author_id, author])
   |                             ^^^^^^
